--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <header>
-
+    <header class="header">
+        <!-- nav area -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y
             </h3>
@@ -30,6 +30,16 @@
                 </li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi,I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
     </header>
 
     <main>
