--- a/index.html
+++ b/index.html
@@ -67,7 +67,38 @@
                 </div>
             </div>
             </div>
+
         </section>
+        <!-- what i do area started -->
+        <h3 class="section-title">What I do</h3>
+        <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and
+            project portfolio.</p>
+        <div class="skills-container">
+            <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <h3 class="skill-title">Vanilla JavaScript</h3>
+                <div class="skill-descrition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <div class="skill-descrition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.js</h3>
+                <div class="skill-descrition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <div class="skill-descrition">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+        </div>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+        </section>
+
 
     </main>
 
